Integrate park my car function.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">MadPark</string>
     <string name="title_activity_maps">Map</string>
     <string name="find_parking">Find Parking</string>
+    <string name="park_my_car">Park My Car</string>
+    <string name="find_my_car">Find My Car</string>
 
     <string name="title_activity_dialog">Parking Availability</string>
     <string name="dialog_text">Simple Dialog</string>
@@ -9,4 +11,5 @@
     <string name="btn_start_route_label">Let\'s Go</string>
 
     <string name="title_destination_activity">Your Destination</string>
+    <string name="title_activity_park_car">Park My Car</string>
 </resources>
